# npasswd

./: README.md  With microscope and tweezers.md
v2.1/src/: Jmakefile  Makefile  Makefile.am  README  chfn.c  chsh.c  compatibility.h  configure.c  configure.scan  constants.h  defines.h  main.c  npasswd.h  options.h  options.h.SH  passwd.c  version.c  version.c.SH
v2.1/src/Common/: Jmakefile  Makefile  chop_nl.c  common.h  compatibility.c  configure.scan  file_util.c  getpass.c  instring.c  messages.c  mpw_util.c  pager.c  pw_svc.c  pw_svc.h  pw_util.c  signals.c  split.c  term.c  xatoi.c  xdecode.c
v2.1/src/Common/RCS/: Jmakefile,v  chop_nl.c,v  common.h,v  compatibility.c,v  file_util.c,v  getpass.c,v  instring.c,v  messages.c,v  mpw_util.c,v  pager.c,v  pw_svc.c,v  pw_svc.h,v  pw_util.c,v  signals.c,v  split.c,v  term.c,v  xatoi.c,v  xdecode.c,v
v2.1/src/Common/old-SCCS/: s.Jmakefile  s.compatibility.c  s.file_util.c  s.messages.c  s.mpw_util.c  s.pager.c  s.pw_svc.h  s.pw_util.c  s.signals.c  s.term.c  s.xatoi.c  s.xdecode.c
v2.1/src/Methods/: Makefile  Makefile.bak  passwdtab.h  shadowtab.h
v2.1/src/Methods/SCCS/: s.passwdtab.h.SH  s.pwm_defs.h  s.pwm_nis.c  (+3 more)
v2.1/src/PasswordCheck/: Makefile  hist_nis.c  pwck_crack.c  pwck_history.c  pwck_local.c  test_history.c  version.c.SH
v2.1/src/RCS/: Jmakefile,v  README,v  chfn.c,v  chsh.c,v  compatibility.h,v  configure.c,v  constants.h,v  defines.h,v  main.c,v  npasswd.h,v  options.h.SH,v  passwd.c,v  version.c.SH,v
v2.1/src/Scripts/: Makefile
v2.1/src/old-SCCS/: s.main.c  s.passwd.c  s.version.c.SH
(+1284 files in other folders)
